# pedidos_parser

./: .gitignore  Separar Pedido.spec  autoparser.txt  constants.py  contants.py  excel_logic.py  home.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
archivos/: Ped 00028464 Fec 18-03-2026 Prv (0703) DEPOSITO DOTA SA.txt
archivos_csv/: Ped 00028464 Fec 18-03-2026 Prv (0703) DEPOSITO DOTA SA.csv
assets/: codigos.xlsx
codigos/: CODIGOS_FINAL.xlsx  codigos.xlsx  codigos_flavio.xlsx  codigos_oficina.xlsx  codigos_ropa.xlsx  ~$codigos.xlsx
db/: __init__.py  database.db
pedidos/: Ped 00003085 Fec 04-03-2026 Prv (0703) DEPOSITO DOTA SA.txt  Ped 00003087 Fec 09-03-2026 Prv (0703) DEPOSITO DOTA SA.txt  Ped Pen 00000460 Fec 17-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003085 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003086 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003087 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003088 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003089 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003090 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003091 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003092 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003093 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003094 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt  Ped Pen 00003095 Fec 27-03-2026 Prv (0703) DEPOSITO DOTA SA (1).txt
(+44 files in other folders)
