[project]
name = "autoparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyinstaller>=6.19.0",
    "regex>=2026.2.28",
    "strenum>=0.4.15",
    "xlsxwriter>=3.2.9",
]
